# School-Game-C

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hud.c  hud.h  main.c  objects.h
include/: Hud.h  asset_manager.h  globals.h  hud.h  items.h
include/enemy/: bear.h  enemy.h  flowey.h  golem.h  hawk.h  wizard.h
include/enemy/projectile/: projectile.h
include/enemy/type/: bear.h  flowey.h  golem.h  hawk.h  nick.h  renoir.h  wizard.h
include/level/: level.h  level_registry.h
include/player/: player.h
include/scene/: scene.h  scene_battle.h  scene_credits.h  scene_gameover.h  scene_level.h  scene_title.h
include/screen/: battle_screen.h  game_screen.h
include/util/: array.h  util.h
level/: level.c  level.h  level_forest1.c  level_forest2.c  level_forest3.c  level_start.c  level_village1.c  level_village2.c  level_village3.c  level_village4.c  level_wizard1.c  level_wizard2.c  level_wizard3.c
screen/: game_screen.c  game_screen.h  screen.h  title_screen.c
src/: Hud.c  asset_manager.c  hud.c  hud.h  main.c  objects.h
src/battle/: battle.h
src/battle/enemy/: bear.c  bear.h  enemy.h  flowey.c  flowey.h  golem.c  golem.h  hawk.c  hawk.h  wizard.c  wizard.h
src/battle/enemy/projectile/: projectile.c  projectile.h
src/enemy/: bear.c  flowey.c  golem.c  hawk.c  nick.c  renoir.c  wizard.c
src/enemy/projectile/: projectile.c
src/items/: items.c  items.h
src/level/: level.h  level_forest1.c  level_forest2.c  level_forest3.c  level_registry.c  level_start.c  level_village1.c  level_village2.c  level_village3.c  level_village4.c  level_wizard1.c  level_wizard2.c  level_wizard3.c
src/level/type/: level_forest1.c  level_forest2.c  level_forest3.c  level_start.c  level_village1.c  level_village2.c  level_village3.c  level_village4.c  level_wizard1.c  level_wizard2.c  level_wizard3.c
src/player/: player.c  player.h
src/scene/: scene_battle.c  scene_credits.c  scene_gameover.c  scene_level.c  scene_title.c
src/screen/: battle_screen.c  battle_screen.h  game_screen.c  game_screen.h  screen.h  title_screen.c
src/util/: array.c  util.c
util/: raylib_util.c  raylib_util.h  util.c
web/: SchoolGameC.wasm
